    - SECURITY: Fix use-after-free and double-free when handling the sudo
      option in remctld.  This may allow (with some difficulty) arbitrary
      command execution on the server by streaming clients if the sudo
      option was used in the server configuration.  Thanks, Santosh
      Ananthakrishnan.  (CVE-2018-0493)
  * Add upstream-vcs-tag pattern to debian/gbp.conf.
  * Update standards version to 4.1.3.
    - Change libremctl-dev priority to optional.

 -- Russ Allbery <rra@debian.org>  Sun, 01 Apr 2018 14:03:29 -0700

remctl (3.13-1) unstable; urgency=medium

  * New upstream release.
    - remctl-shell now supports being run as a forced command.
    - The summary configuration option is now allowed for commands with
      subcommands other than ALL, passing in two arguments to the summary
      command.
  * Build the standalone binaries with -fPIE.

 -- Russ Allbery <rra@debian.org>  Mon, 10 Oct 2016 19:23:31 -0700

remctl (3.12-1) unstable; urgency=medium

  * New upstream release.
    - New server implementation, remctl-shell, included in the
      remctl-server package, which is meant to be run as the shell of a
      dedicated user via ssh and supports the same configuration as
      remctld.  (This may eventually move into a separate package; if you
      would like to see that, file a bug.)
    - New server configuration option, sudo, which says to change users
      with sudo when running the command.
  * Hard-code the path to sudo in the build so that the sudo package
    doesn't have to be installed when building the package.
  * Switch to the new comment character for php-remctl.ini.
  * Switch to https for all package metadata URLs.
  * Remove now-unneeded source Lintian override.
  * Update standards version to 3.9.8 (no changes required).

 -- Russ Allbery <rra@debian.org>  Fri, 29 Jul 2016 13:23:57 -0700

remctl (3.11-1) unstable; urgency=medium

  * New upstream release.
    - Port to PHP 7.  (Closes: #821713)